<resources>

    <!-- Resources that do not require translation -->
    <string name="app_name" translatable="false">EasyBike</string>

    <!-- Translatable resources -->

    <!-- Titles -->
    <string name="title_map">Map</string>
    <string name="title_statistic">Statistic</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_back_permission">One more permission</string>
    <string name="user_create_title">EasyBike needs some data</string>
    <string name="user_create_or_edit">You\'r data</string>

    <!-- User Adding or Editing -->
    <string name="error_input_name">Invalid name</string>
    <string name="error_input_age">Invalid age</string>
    <string name="error_input_weight">Invalid weight</string>
    <string name="error_input_height">Invalid height</string>
    <string name="error_input_sex">Invalid sex</string>
    <string name="name_hint">Name:</string>
    <string name="age_hint">Age:</string>
    <string name="weight_hint">Weight:</string>
    <string name="height_hint">Height:</string>
    <string name="save_btn">Save</string>
    <string name="male_hint">Male</string>
    <string name="female_hint">Female</string>

    <!-- Util -->
    <string name="negative_button_cancel">Cancel</string>
    <string name="positive_button_ok">OK</string>
    <string name="lets_do_it">Let\'s do it!</string>
    <string name="current_position">Current position</string>
    <!-- journey.xml -->
    <string name="distance">Distance</string>
    <string name="speed">Speed</string>
    <string name="duration">Duration</string>
    <string name="date">Date</string>
    <string name="distance_with_km">%s km</string>
    <string name="speed_with_kmh">%s km/h</string>
    <string name="map_with_path_description">This is map with path image</string>
    <string name="btStartService">Start</string>
    <string name="btStopService">Stop</string>

    <!-- Welcome Fragment -->
    <string name="welcome_title">Welcome to the EasyBike</string>
    <string name="gps_permission_access">Permission for permanent location tracking is required
        to use the app. EasyBike will use your location in the background to display your
        journeys on the map.</string>
    <string name="request_permission">Request permission</string>
    <string name="permission_granted">Permission granted</string>
    <string name="cannot_work_without_permission_first">This application cannot work without
        Location Permission.</string>
    <string name="full_time_access">One more!</string>
    <string name="cant_work">EasyBike cannot work without Location Permission.</string>

    <!-- BackLocation Fragment -->
    <string name="back_location_fragment_title">We need one more permission!</string>
    <string name="gps_back_permission_access">Change configuring location access
        to \"Allow all the time\". Without this access app cannot work.</string>
    <string name="Q_access_permission_dialog">Choose \"Allow all the time\" in settings.</string>
    <string name="request_permission_Q">Request one more</string>

    <!-- User Create Fragment -->
    <string name="need_data">You need to enter your data, which we need to count calories.
        This data is stored only on your device and is not used for analytics.
        For more information about what data we collect, you can read the privacy policy</string>

    <!-- Preference -->
    <string name="user_header">User settings</string>
    <string name="theme_header">App settings</string>
    <string name="privacy_policy_header">Privacy policy</string>
    <string name="user_edit_title">Change user data</string>
    <string name="night_theme_toggle_title">Dark theme</string>
    <string name="privacy_policy_title">Open privacy policy</string>
    <string name="user_edit_key">user_edit</string>
    <string name="dark_theme_key">dark_theme</string>
    <string name="privacy_policy_key">privacy_policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="save">Save</string>
    <string name="current_location">You are here</string>
    <string name="saveButton">Save</string>
    <string name="startButton">Start</string>

    <!-- Dialog -->
    <string name="delete_the_journey">Delete the Journey</string>
    <string name="sure_question_delete_hourney">Are you sure you want to delete this journey</string>
    <string name="calories">Calories</string>


    <!-- Other -->
</resources>